--- a/css/monufactur.css
+++ b/css/monufactur.css
@@ -373,6 +373,8 @@
       padding-left: 15px;
       padding-right: 14px;
       box-sizing: border-box; }
+  .haier .descript_wrap {
+    height: 280px; }
 
 .hisense {
   padding: 21px;
