--- a/css/comment.css
+++ b/css/comment.css
@@ -5,7 +5,7 @@
   width: 100%;
   max-width: 1170px;
   min-height: 550px;
-  background: #ffffff;
+  background: url("../img/comment_fon.jpg") center top no-repeat;
   z-index: 99;
   -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
@@ -23,6 +23,13 @@
     -webkit-border-radius: 50%;
     background: #FFFFFF;
     text-align: center; }
+    @media (max-height: 900px) {
+      .comment_block .close {
+        top: 6.5px;
+        right: 6.5px;
+        -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
+        -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
+        box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24); } }
     .comment_block .close i {
       display: inline-block;
       width: 15px;
@@ -35,7 +42,8 @@
     min-height: 67px;
     border: 1px solid #cdcdcd;
     box-sizing: border-box;
-    padding-left: 22px; }
+    padding-left: 22px;
+    background: #ffffff; }
     @media (max-height: 750px) {
       .comment_block_header {
         min-height: 47px; } }
@@ -72,7 +80,8 @@
     padding-top: 8px;
     padding-bottom: 8px;
     border: 1px solid #cdcdcd;
-    border-top: none; }
+    border-top: none;
+    background: rgba(255, 255, 255, 0.5); }
     .comment_block .individuals_block .slick-arrow {
       margin-top: 0px;
       top: 41px;
@@ -186,7 +195,8 @@
           width: 50%;
           border: 2px solid #024753;
           box-sizing: border-box;
-          min-height: 110px; }
+          min-height: 110px;
+          background: #ffffff; }
           @media (max-height: 750px) {
             .comment_block .individuals_block_slide_header_yandex_block {
               min-height: 0px; }
@@ -300,8 +310,8 @@
   .comment_block .entity_wrap {
     float: left;
     width: 100%;
-    margin-top: 15px;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.6); }
     .comment_block .entity_wrap .slick-arrow {
       background-color: transparent;
       margin-top: 0px;
@@ -321,8 +331,10 @@
       background-position: -288px -103px;
       display: inline-block;
       margin-right: 15px; }
-    .comment_block .entity_wrap .comment_block_header h3 span {
-      color: #e81e1e; }
+    .comment_block .entity_wrap .comment_block_header {
+      background: #ffffff; }
+      .comment_block .entity_wrap .comment_block_header h3 span {
+        color: #e81e1e; }
     .comment_block .entity_wrap_slider {
       width: 100%;
       min-height: 95px;
