--- a/css/modal.css
+++ b/css/modal.css
@@ -177,13 +177,22 @@
           background-image: url("../img/sprite_section.png");
           background-position: -51px -192px; }
     .brend_block_box_logo_block {
-      width: 100%;
-      overflow: hidden; }
+      width: 100%; }
       .brend_block_box_logo_block a {
         display: block;
         float: left;
         width: 50%;
-        text-align: center; }
+        text-align: center;
+        transition: 1s;
+        -moz-transition: 1s;
+        -webkit-transition: 1s;
+        -o-transition: 1s; }
+        .brend_block_box_logo_block a:hover {
+          -moz-transform: scale(1.3);
+          -webkit-transform: scale(1.3);
+          -o-transform: scale(1.3);
+          -ms-transform: scale(1.3);
+          transform: scale(1.3); }
         .brend_block_box_logo_block a img {
           max-width: 100%; }
       .brend_block_box_logo_block .big {
@@ -859,6 +868,8 @@
       padding-left: 12px;
       box-sizing: border-box;
       margin-top: 38px; }
+      .services_block_link_box_block:hover a {
+        color: #620909; }
       .services_block_link_box_block_img_line {
         width: 100%;
         float: left;
@@ -1474,7 +1485,7 @@
   width: 100%;
   max-width: 1170px;
   min-height: 550px;
-  background: #ffffff;
+  background: url("../img/comment_fon.jpg") center top no-repeat;
   z-index: 99;
   -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
@@ -1492,6 +1503,13 @@
     -webkit-border-radius: 50%;
     background: #FFFFFF;
     text-align: center; }
+    @media (max-height: 900px) {
+      .comment_block .close {
+        top: 6.5px;
+        right: 6.5px;
+        -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
+        -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
+        box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24); } }
     .comment_block .close i {
       display: inline-block;
       width: 15px;
@@ -1504,7 +1522,8 @@
     min-height: 67px;
     border: 1px solid #cdcdcd;
     box-sizing: border-box;
-    padding-left: 22px; }
+    padding-left: 22px;
+    background: #ffffff; }
     @media (max-height: 750px) {
       .comment_block_header {
         min-height: 47px; } }
@@ -1541,7 +1560,8 @@
     padding-top: 8px;
     padding-bottom: 8px;
     border: 1px solid #cdcdcd;
-    border-top: none; }
+    border-top: none;
+    background: rgba(255, 255, 255, 0.5); }
     .comment_block .individuals_block .slick-arrow {
       margin-top: 0px;
       top: 41px;
@@ -1655,7 +1675,8 @@
           width: 50%;
           border: 2px solid #024753;
           box-sizing: border-box;
-          min-height: 110px; }
+          min-height: 110px;
+          background: #ffffff; }
           @media (max-height: 750px) {
             .comment_block .individuals_block_slide_header_yandex_block {
               min-height: 0px; }
@@ -1769,8 +1790,8 @@
   .comment_block .entity_wrap {
     float: left;
     width: 100%;
-    margin-top: 15px;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.6); }
     .comment_block .entity_wrap .slick-arrow {
       background-color: transparent;
       margin-top: 0px;
@@ -1790,8 +1811,10 @@
       background-position: -288px -103px;
       display: inline-block;
       margin-right: 15px; }
-    .comment_block .entity_wrap .comment_block_header h3 span {
-      color: #e81e1e; }
+    .comment_block .entity_wrap .comment_block_header {
+      background: #ffffff; }
+      .comment_block .entity_wrap .comment_block_header h3 span {
+        color: #e81e1e; }
     .comment_block .entity_wrap_slider {
       width: 100%;
       min-height: 95px;
@@ -2054,6 +2077,47 @@
             color: #ffff20; }
           .black_panel_servises ul li a:visited {
             color: #7a0505; }
+      .black_panel_servises ul .spec_wrap {
+        position: relative; }
+        .black_panel_servises ul .spec_wrap:hover .spec_block {
+          display: block; }
+        .black_panel_servises ul .spec_wrap .spec_block {
+          position: absolute;
+          width: 327px;
+          height: 94px;
+          outline: 2px solid #620909;
+          box-sizing: border-box;
+          text-align: left;
+          background: #ffffff;
+          top: -34px;
+          left: -19px;
+          display: none; }
+          .black_panel_servises ul .spec_wrap .spec_block:hover {
+            color: #000000; }
+          .black_panel_servises ul .spec_wrap .spec_block_img {
+            float: left;
+            width: 90px;
+            height: 94px;
+            text-align: center; }
+            .black_panel_servises ul .spec_wrap .spec_block_img img {
+              margin-top: 19.5px; }
+          .black_panel_servises ul .spec_wrap .spec_block_text {
+            float: left;
+            width: 236px;
+            height: 94px; }
+            .black_panel_servises ul .spec_wrap .spec_block_text h3 {
+              width: 100%;
+              font: 14px/20px Verdana;
+              margin-top: 2px;
+              font-weight: bold; }
+            .black_panel_servises ul .spec_wrap .spec_block_text p {
+              font: 10px/11px Verdana;
+              letter-spacing: -0.2px;
+              width: 100%; }
+              .black_panel_servises ul .spec_wrap .spec_block_text p span {
+                color: #c60000; }
+              .black_panel_servises ul .spec_wrap .spec_block_text p b {
+                color: #620909; }
   .black_panel_actions {
     float: left;
     width: 100%; }
