--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,9 @@ table {
               display: none; } }
           .header .header_nav_logo_line_logo p b {
             font-size: 11px;
-            font-weight: bold; }
+            font-weight: bold;
+            display: inline-block;
+            margin-top: 2px; }
       .header .header_nav_logo_line_sity {
         float: right;
         font: 11px/40px Verdana;
@@ -924,6 +926,8 @@ table {
         text-decoration: underline;
         float: left;
         margin-top: 10px; }
+        .header__user_info_info_check:hover {
+          color: #620909; }
         @media (max-width: 1009px) {
           .header__user_info_info_check {
             display: none; } }
@@ -1595,13 +1599,22 @@ table {
           background-image: url("../img/sprite_section.png");
           background-position: -51px -192px; }
     .brend_block_box_logo_block {
-      width: 100%;
-      overflow: hidden; }
+      width: 100%; }
       .brend_block_box_logo_block a {
         display: block;
         float: left;
         width: 50%;
-        text-align: center; }
+        text-align: center;
+        transition: 1s;
+        -moz-transition: 1s;
+        -webkit-transition: 1s;
+        -o-transition: 1s; }
+        .brend_block_box_logo_block a:hover {
+          -moz-transform: scale(1.3);
+          -webkit-transform: scale(1.3);
+          -o-transform: scale(1.3);
+          -ms-transform: scale(1.3);
+          transform: scale(1.3); }
         .brend_block_box_logo_block a img {
           max-width: 100%; }
       .brend_block_box_logo_block .big {
@@ -2277,6 +2290,8 @@ table {
       padding-left: 12px;
       box-sizing: border-box;
       margin-top: 38px; }
+      .services_block_link_box_block:hover a {
+        color: #620909; }
       .services_block_link_box_block_img_line {
         width: 100%;
         float: left;
@@ -2892,7 +2907,7 @@ table {
   width: 100%;
   max-width: 1170px;
   min-height: 550px;
-  background: #ffffff;
+  background: url("../img/comment_fon.jpg") center top no-repeat;
   z-index: 99;
   -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
   -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
@@ -2910,6 +2925,13 @@ table {
     -webkit-border-radius: 50%;
     background: #FFFFFF;
     text-align: center; }
+    @media (max-height: 900px) {
+      .comment_block .close {
+        top: 6.5px;
+        right: 6.5px;
+        -webkit-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
+        -moz-box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24);
+        box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.24); } }
     .comment_block .close i {
       display: inline-block;
       width: 15px;
@@ -2922,7 +2944,8 @@ table {
     min-height: 67px;
     border: 1px solid #cdcdcd;
     box-sizing: border-box;
-    padding-left: 22px; }
+    padding-left: 22px;
+    background: #ffffff; }
     @media (max-height: 750px) {
       .comment_block_header {
         min-height: 47px; } }
@@ -2959,7 +2982,8 @@ table {
     padding-top: 8px;
     padding-bottom: 8px;
     border: 1px solid #cdcdcd;
-    border-top: none; }
+    border-top: none;
+    background: rgba(255, 255, 255, 0.5); }
     .comment_block .individuals_block .slick-arrow {
       margin-top: 0px;
       top: 41px;
@@ -3073,7 +3097,8 @@ table {
           width: 50%;
           border: 2px solid #024753;
           box-sizing: border-box;
-          min-height: 110px; }
+          min-height: 110px;
+          background: #ffffff; }
           @media (max-height: 750px) {
             .comment_block .individuals_block_slide_header_yandex_block {
               min-height: 0px; }
@@ -3187,8 +3212,8 @@ table {
   .comment_block .entity_wrap {
     float: left;
     width: 100%;
-    margin-top: 15px;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    background: rgba(255, 255, 255, 0.6); }
     .comment_block .entity_wrap .slick-arrow {
       background-color: transparent;
       margin-top: 0px;
@@ -3208,8 +3233,10 @@ table {
       background-position: -288px -103px;
       display: inline-block;
       margin-right: 15px; }
-    .comment_block .entity_wrap .comment_block_header h3 span {
-      color: #e81e1e; }
+    .comment_block .entity_wrap .comment_block_header {
+      background: #ffffff; }
+      .comment_block .entity_wrap .comment_block_header h3 span {
+        color: #e81e1e; }
     .comment_block .entity_wrap_slider {
       width: 100%;
       min-height: 95px;
@@ -3472,6 +3499,47 @@ table {
             color: #ffff20; }
           .black_panel_servises ul li a:visited {
             color: #7a0505; }
+      .black_panel_servises ul .spec_wrap {
+        position: relative; }
+        .black_panel_servises ul .spec_wrap:hover .spec_block {
+          display: block; }
+        .black_panel_servises ul .spec_wrap .spec_block {
+          position: absolute;
+          width: 327px;
+          height: 94px;
+          outline: 2px solid #620909;
+          box-sizing: border-box;
+          text-align: left;
+          background: #ffffff;
+          top: -34px;
+          left: -19px;
+          display: none; }
+          .black_panel_servises ul .spec_wrap .spec_block:hover {
+            color: #000000; }
+          .black_panel_servises ul .spec_wrap .spec_block_img {
+            float: left;
+            width: 90px;
+            height: 94px;
+            text-align: center; }
+            .black_panel_servises ul .spec_wrap .spec_block_img img {
+              margin-top: 19.5px; }
+          .black_panel_servises ul .spec_wrap .spec_block_text {
+            float: left;
+            width: 236px;
+            height: 94px; }
+            .black_panel_servises ul .spec_wrap .spec_block_text h3 {
+              width: 100%;
+              font: 14px/20px Verdana;
+              margin-top: 2px;
+              font-weight: bold; }
+            .black_panel_servises ul .spec_wrap .spec_block_text p {
+              font: 10px/11px Verdana;
+              letter-spacing: -0.2px;
+              width: 100%; }
+              .black_panel_servises ul .spec_wrap .spec_block_text p span {
+                color: #c60000; }
+              .black_panel_servises ul .spec_wrap .spec_block_text p b {
+                color: #620909; }
   .black_panel_actions {
     float: left;
     width: 100%; }
@@ -3908,6 +3976,8 @@ table {
               float: left;
               box-sizing: border-box;
               min-width: 100px; }
+              .power_calculator_coontent_form_base_line .input_block .select:hover .arow {
+                background: url("../img/temp_hover/hover_calcul.png") center no-repeat; }
               .power_calculator_coontent_form_base_line .input_block .select input[type='text'] {
                 border: none;
                 float: left;
@@ -3971,7 +4041,14 @@ table {
                     font-size: 11px;
                     line-height: 14px;
                     color: #9a9a9a; }
+              .power_calculator_coontent_form_base_line .input_block .select .option_big {
+                width: 420%;
+                left: -160%;
+                border-top: 1px solid #3b6e8b; }
             .power_calculator_coontent_form_base_line .input_block .open .arow {
+              background-image: url("../img/sprite_section.png");
+              background-position: -133px -96px; }
+            .power_calculator_coontent_form_base_line .input_block .open:hover .arow {
               background-image: url("../img/sprite_section.png");
               background-position: -133px -96px; }
             .power_calculator_coontent_form_base_line .input_block .unit {
@@ -4090,7 +4167,10 @@ table {
             .power_calculator_coontent_form .button_line a {
               margin-top: 10px; } }
           .power_calculator_coontent_form .button_line a:hover {
-            outline: 1px solid #b80000; }
+            outline: 1px solid #b80000;
+            color: #000000; }
+            .power_calculator_coontent_form .button_line a:hover span {
+              background: none; }
           @media (max-width: 703px) {
             .power_calculator_coontent_form .button_line a {
               display: inline-block;
@@ -4382,6 +4462,9 @@ table {
       .power_calculator_footer {
         padding-bottom: 20px;
         overflow: hidden; } }
+    @media (max-height: 800px) {
+      .power_calculator_footer {
+        display: none; } }
     .power_calculator_footer_block {
       float: left;
       width: 50%;
@@ -4821,6 +4904,8 @@ table {
       padding-left: 15px;
       padding-right: 14px;
       box-sizing: border-box; }
+  .haier .descript_wrap {
+    height: 280px; }
 
 .hisense {
   padding: 21px;
@@ -5099,6 +5184,8 @@ table {
     color: #267fae;
     text-decoration: underline;
     margin-top: 20px; }
+    .product_zag:hover {
+      color: #620909; }
   .product_img_line {
     float: left;
     width: 100%;
@@ -5233,6 +5320,8 @@ table {
         margin-left: 5px;
         margin-bottom: 11px;
         text-decoration: underline; }
+        .product__all_info_header_zag:hover {
+          color: #620909; }
     .product__all_info__price_line {
       float: left;
       width: 100%;
@@ -5406,7 +5495,8 @@ table {
           .product__all_info_info_line_row .info .art {
             float: left;
             font: 14px/27px 'Roboto-Medium';
-            color: #919191; }
+            color: #919191;
+            font-style: italic; }
         .product__all_info_info_line_row:nth-child(even) {
           background-color: #f9f9f9; }
     .product__all_info_footer {
@@ -5869,6 +5959,8 @@ table {
             color: #267fae;
             text-decoration: underline;
             margin-top: 20px; }
+            .section_product_wrap_slider_block .slide_zag:hover {
+              color: #620909; }
           .section_product_wrap_slider_block .slide_img_line {
             float: left;
             width: 100%;
@@ -6174,7 +6266,8 @@ table {
                   .section_product_wrap_slider_block .slide__all_info_info_line_row .info .art {
                     float: left;
                     font: 14px/27px 'Roboto-Medium';
-                    color: #919191; }
+                    color: #919191;
+                    font-style: italic; }
                 .section_product_wrap_slider_block .slide__all_info_info_line_row:nth-child(even) {
                   background-color: #f9f9f9; }
             .section_product_wrap_slider_block .slide__all_info_footer {
@@ -6289,10 +6382,13 @@ table {
             .section_product_wrap_price_wrap .aside_action_block ul li {
               width: 100%;
               margin-bottom: 12px; }
+              .section_product_wrap_price_wrap .aside_action_block ul li:hover {
+                color: #003c95;
+                outline: 1px solid #003c95; }
+                .section_product_wrap_price_wrap .aside_action_block ul li:hover a {
+                  text-decoration: underline; }
               .section_product_wrap_price_wrap .aside_action_block ul li a {
                 font: 12px/15px Verdana; }
-                .section_product_wrap_price_wrap .aside_action_block ul li a:hover {
-                  color: #074e23; }
                 .section_product_wrap_price_wrap .aside_action_block ul li a sup {
                   font-size: 8px;
                   vertical-align: super; }
@@ -8056,7 +8152,8 @@ html, body {
 .wraper {
   width: 100%;
   min-height: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  position: relative; }
   .wraper .slick-arrow {
     position: absolute;
     top: 50%;
