--- a/sass/header.scss
+++ b/sass/header.scss
@@ -193,6 +193,8 @@
           b {
             font-size: 11px;
             font-weight: bold;
+            display: inline-block;
+            margin-top: 2px;
           }
         }
       }
@@ -1014,6 +1016,9 @@
         text-decoration: underline;
         float: left;
         margin-top: 10px;
+        &:hover{
+          color: #620909;
+        }
         @media(max-width: 1009px) {
           display: none;
         }
