--- a/sass/power_calculator.scss
+++ b/sass/power_calculator.scss
@@ -270,6 +270,7 @@
               color: #4b4b4b;
               min-width: 100px;
             }
+
             .select {
               text-align: left;
               height: 42px;
@@ -283,6 +284,11 @@
               float: left;
               box-sizing: border-box;
               min-width: 100px;
+              &:hover{
+                .arow{
+                  background: url("../img/temp_hover/hover_calcul.png") center no-repeat;
+                }
+              }
               input[type='text'] {
                 border: none;
                 float: left;
@@ -303,6 +309,7 @@
                 background-position: -122px -96px;
                 margin-top: 17.5px;
               }
+
               .option {
                 position: absolute;
                 top: 38px;
@@ -356,11 +363,22 @@
                   }
                 }
               }
+              .option_big{
+                width: 420%;
+                left:-160%;
+                border-top: 1px solid #3b6e8b;
+              }
             }
             .open{
               .arow{
                 background-image: url("../img/sprite_section.png");
                 background-position: -133px -96px;
+              }
+              &:hover{
+                .arow{
+                  background-image: url("../img/sprite_section.png");
+                  background-position: -133px -96px;
+                }
               }
             }
             .unit {
@@ -497,6 +515,10 @@
           }
           &:hover{
             outline: 1px solid #b80000;
+            color: #000000;
+            span{
+              background: none;
+            }
           }
           @media(max-width: 703px){
             display: inline-block;
@@ -838,6 +860,9 @@
     @media(max-width: 742px){
       padding-bottom: 20px;
       overflow: hidden;
+    }
+    @media(max-height: 800px){
+      display: none;
     }
     &_block{
       float: left;
